tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImport1.errors.txt
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(1,34): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(3,36): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(5,41): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(7,44): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(9,43): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
es6ImportDefaultBindingFollowedWithNamedImport1_1.ts(11,38): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.


==== es6ImportDefaultBindingFollowedWithNamedImport1_0.ts (0 errors) ====
    var a = 10;
    export default a;
    
==== es6ImportDefaultBindingFollowedWithNamedImport1_1.ts (6 errors) ====
    import defaultBinding1, { } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding1;
    import defaultBinding2, { a } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding2;
    import defaultBinding3, { a as b } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding3;
    import defaultBinding4, { x, a as y } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding4;
    import defaultBinding5, { x as z,  } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding5;
    import defaultBinding6, { m,  } from "es6ImportDefaultBindingFollowedWithNamedImport1_0";
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamedImport1_0' or its corresponding type declarations.
    var x1: number = defaultBinding6;
    